src/lexer/snapshots/vfpl__lexer__test__all_keywords-10.snap
---
source: src/lexer/test.rs
expression: "lex(\"The\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: The,
        },
    ],
)
