src/lexer/snapshots/vfpl__lexer__test__all_keywords-16.snap
---
source: src/lexer/test.rs
expression: "lex(\"By\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: By,
        },
    ],
)
