src/lexer/snapshots/vfpl__lexer__test__all_keywords-18.snap
---
source: src/lexer/test.rs
expression: "lex(\"End\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: End,
        },
    ],
)
