src/lexer/snapshots/vfpl__lexer__test__all_keywords-23.snap
---
source: src/lexer/test.rs
expression: "lex(\"Otherwise\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Otherwise,
        },
    ],
)
