src/lexer/snapshots/vfpl__lexer__test__all_keywords-24.snap
---
source: src/lexer/test.rs
expression: "lex(\"Break\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 5,
            },
            kind: Break,
        },
    ],
)
