src/lexer/snapshots/vfpl__lexer__test__all_keywords-27.snap
---
source: src/lexer/test.rs
expression: "lex(\"Create\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Create,
        },
    ],
)
