src/lexer/snapshots/vfpl__lexer__test__all_keywords-28.snap
---
source: src/lexer/test.rs
expression: "lex(\"Function\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 8,
            },
            kind: Function,
        },
    ],
)
