src/lexer/snapshots/vfpl__lexer__test__all_keywords-30.snap
---
source: src/lexer/test.rs
expression: "lex(\"Parameters\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 10,
            },
            kind: Parameters,
        },
    ],
)
