src/lexer/snapshots/vfpl__lexer__test__all_keywords-34.snap
---
source: src/lexer/test.rs
expression: "lex(\"No\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: No,
        },
    ],
)
