src/lexer/snapshots/vfpl__lexer__test__all_keywords-47.snap
---
source: src/lexer/test.rs
expression: "lex(\"Has\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Has,
        },
    ],
)
